--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<!--
-	Eventually by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Jar Of Java</title>
@@ -27,6 +22,7 @@
 				<input type="text" name="email" id="email" placeholder="Username" />
 				<input type="password" name="email" id="email" placeholder="Password" />
 				<input type="submit" value="Log In" />
+				<input type="submit" value="Request Access" />
 			</form>
 
 		<!-- Footer -->
